Improve ordering of update steps in publish workflow

--- a/.github/workflows/commit-publish-docs.yml
+++ b/.github/workflows/commit-publish-docs.yml
@@ -10,15 +10,50 @@ on:
       - "mkdocs.yml"
       - "requirements.txt"
       - "RELEASE_NOTES.md"
+      - "CITATION.cff"
 
 jobs:
+  determine-exec-order:
+    name: Determine execution order
+    runs-on: ubuntu-22.04
+    outputs:
+      citations: ${{ steps.filter.outputs.citations }}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        ref: main
+    - uses: dorny/paths-filter@v3
+      id: filter
+      with:
+        filters: |
+          citations:
+            - 'CITATION.cff'
+    # run only if 'CITATION.cff' file was changed
+    - name: citation changed
+      if: steps.filter.outputs.citations == 'true'
+      run: echo "CITATION.cff changed"
+
+    # run only if not 'CITATION.cff' files were changed
+    - name: citation not changed
+      if: steps.filter.outputs.citations != 'true'
+      run: echo "CITATION.cff not changed"
+
+  cffconvert:
+    uses: ./.github/workflows/commit-cffconvert.yml
+    needs: determine-exec-order
+    if: ${{ needs.determine-exec-order.outputs.citations == 'true' }}
+
   signposting:
     uses: ./.github/workflows/signposting.yml
+    needs: cffconvert
+    if: always() && !failure() && !cancelled()
 
   deploy_docs:
     name: Deploy docs
     runs-on: ubuntu-22.04
     needs: signposting
+    if: always() && !failure() && !cancelled()
     steps:
       - name: Checkout master
         uses: actions/checkout@v3
@@ -43,6 +78,6 @@ jobs:
 
       - name: Deploy with mike
         run: |
-          mike deploy --rebase --push --update-aliases latest
+          mike deploy --push --update-aliases latest
           git checkout gh-pages
-          git cat-file -e gh-pages:index.html 2> /dev/null && echo "Default version already set. Skipping..." || (echo "Setting default version..." && git checkout main && mike set-default --rebase --push latest)
+          git cat-file -e gh-pages:index.html 2> /dev/null && echo "Default version already set. Skipping..." || (echo "Setting default version..." && git checkout main && mike set-default --push latest)
